- configured jacoco for coverage - added first unit test